fix: fix overflow

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -22,6 +22,9 @@
     display: none;
     left: 0;
     width: 100%;
+    max-height: 90vh;
+    overflow-y: auto;
+    @include scrollBar(6px);
     &-body {
       margin-top: 10px;
       background-color: $sidebar-bg;
